---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: ????
  Changes:
    - .. and I need to learn how to write change log entries...
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 2024-11-01
  Changes:
    - 2.0.14 fixed the "fluids disappearing" bug. Back the change out again.
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2024-10-26
  Changes:
    - Refactor the code to be more modular, rework the rotate / move logic
    - Fix issue where contents disappear from a moved storage tank. This smells like a bug in the
      game itself (see https://forums.factorio.com/viewtopic.php?f=7&t=117719)
    - add reverse oblong rotation
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2024-10-25
  Changes:
    - Fixed crash with remote interface (reported on the mod forum, thanks @wretlaw120)
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2024-10-24
  Changes:
    - Forked from PickerDollies 1.2.6
    - applied Factorio 2.0 changes